# legend-data-monitor

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  codecov.yml  config.json  filelist.txt  monitor-3Dplots.ipynb  monitor-par-vs-time.ipynb  monitor-plots.ipynb  notebook-funzionante.ipynb  pyproject.toml  run-legend-data-monitor.py  setup.cfg
.github/workflows/: distributions.yml  main.yml
attic/auto_prod/: README.md  main_sync_code.py  monitoring.py
attic/automatic_prod/: README.md  automatic_run.sh  build_new_files.py  default_config.yaml  email_alert.py  fix_hdf_output.py  ignore_keys.json  main_sync_code.py  main_sync_code_new.py  message.txt  monitoring.py  monitoring_new.py
attic/automatic_prod/output/: auto_config.json  auto_slow_control.json
docs/: Makefile
docs/source/: .py_api_exclude  conf.py  index.rst
docs/source/manuals/: avail_pars.rst  get_plots.rst  get_sc_plots.rst  index.rst  inspect_plots.rst  potpourri.rst  settings_folder.rst
examples/: LegendDataMonitor_functionality.ipynb  user_config_example_L200.json
excel/: config_io.py  create_dashboard.py  create_qcp_dashboard.py  detector_history.py  l200-p19-auto_latest-qcp_summary.xlsx  l200-p20-auto_latest-qcp_summary.xlsx  main.py  make_dashboard.py  read_qcp.py  read_usability.py  sync_to_datasets.py
notebook/: L200-plotting-concatenate_runs_periods.ipynb  L200-plotting-hdf-widgets.ipynb  L200-plotting-individual-runs.ipynb  L200-plotting-widgets.ipynb  monitor-par-vs-time-2D.ipynb  monitor-par-vs-time-3D.ipynb  monitor-par-vs-time.ipynb
notebooks/: notebook-funzionante.ipynb
src/legend_data_monitor/: __init__.py  __main__.py  analysis.py  analysis_data.py  automatic_run.py  calibration.py  config.py  control_plots.py  core.py  cuts.py  data_monitor.py  dataset.py  heatmaps.py  ipynb_info.py  main.py  map.py  monitoring.py  parameter_data.py  parameters.py  plot.py  plot_data.py  plot_sc.py  plot_styles.py  plotting.py  run.py  save_data.py  slow_control.py  status_plot.py  string_visualization.py  subsystem.py  timecut.py  utils.py
src/legend_data_monitor/config/: p03_L200_phy_r000.json  p03_L200_phy_r000.yaml  p03_r000_L200_hdf_example.json  p03_r000_L200_hdf_example.yaml  slow_control_example.json  slow_control_example.yaml
src/legend_data_monitor/settings/: L200-p01-r%-T%-all-config.json  L60-p01-r022-T%-all-config.json  SC-params.json  SC-params.yaml  SiPM-config.json  auto_config.json  config.json  final-calibrations.yaml  flags.json  flags.yaml  ignore-keys.json  ignore-keys.yaml  lngs-config.json  map-channels.json  no-pulser-dets.json  no-pulser-dets.yaml  par-settings.json  par-settings.yaml  parameter-tiers.json  parameter-tiers.yaml  plot-settings.json  remove-dets.json  remove-dets.yaml  remove-keys-COAXp04.yaml  remove-keys.json  remove-keys.yaml  special-parameters.json  special-parameters.yaml  spms_map.json  timestamps-to-filter.json  timestamps-to-filter.yaml  user_config_L200_geds.json  user_config_L200_phy_cal.json  user_config_L200_phy_r010.json  user_config_L200_phy_r014.json  user_config_L200_pulser.json  user_config_L60_pulser.json  user_config_example_L200.json
tests/: test_core.py
tests/analysis_data/: test_select_events.py
tests/calibration/: test_evaluate_psd_performance.py  test_load_fit_pars_from_yaml.py  test_update_psd_evaluation_in_memory.py
tests/monitoring/: test_add_calibration_runs.py  test_build_new_files.py  test_compute_diff.py  test_compute_diff_and_rescaling.py  test_evaluate_fep_cal.py  test_extract_Qbb.py  test_extract_fep_peak.py  test_filter_by_period.py  test_filter_series_by_ignore_keys.py  test_find_hdf_file.py  test_get_calib_data_dict.py  test_get_calib_pars.py  test_get_calibration_file.py  test_get_dfs.py  test_get_energy_key.py  test_get_run_start_end_times.py  test_get_tier_keyresult.py  test_get_traptmax_tp0est.py  test_read_if_key_exists.py  test_resample_series.py
tests/save_data/: test_build_out_dict.py  test_check_existence_and_overwrite.py  test_check_level0.py  test_get_param_df.py  test_get_param_info.py  test_save_df_and_info.py
tests/utils/: test_check_empty_df.py  test_check_key_existence.py  test_check_plot_settings.py  test_check_scdb_settings.py  test_check_threshold.py  test_convert_to_camel_case.py  test_dataset_validity_check.py  test_get_key.py  test_get_livetime.py  test_get_map_dict.py  test_get_multiple_run_id.py  test_get_output_path.py  test_get_output_plot_path.py  test_get_query_timerange.py  test_get_time_name.py  test_get_timestamp.py  test_get_valid_path.py  test_load_config.py  test_make_dir.py  test_make_output_paths.py  test_read_json_or_yaml.py  test_retrieve_json_or_yaml.py  test_unix_timestamp_to_string.py
