[metadata]
name = legend_data_monitor
version = attr: legend_data_monitor._version.version
description = LEGEND data monitoring
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/legend-exp/legend-data-monitor
author = 'Sofia Calgaro, Michele Morella'
author_email = 'sofia.calgaro@physik.uzh.ch, michele.morella@gssi.it'
maintainer = The LEGEND Collaboration
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development

[options]
packages = find:
install_requires =
    pygama@git+https://github.com/legend-exp/pygama@main
    pylegendmeta@git+https://github.com/legend-exp/pylegendmeta@main
    seaborn
python_requires = >=3.9
include_package_data = True
package_dir =
    = src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    legend-data-monitor = legend_data_monitor.run:main

[options.extras_require]
all =
    legend-data-monitor[docs,test]
docs =
    furo
    myst-parser
    sphinx
    sphinx-copybutton
test =
    pre-commit
    pytest>=6.0
    pytest-cov

[options.package_data]
legend_data_monitor = settings/*.json

[flake8]
extend-ignore = E203, E501, D10, N806
exclude = *trapTmax*

[codespell]
ignore-words-list = crate, nd, unparseable, compiletime, puls, livetime, whis
